--- a/content/portfolio/project-1.rmd
+++ b/content/portfolio/project-1.rmd
@@ -94,13 +94,15 @@ beer <- drinks %>%
   head(25)
 
 # create the plot of the top-25 countries using ggplot2
-ggplot(beer, aes(y = reorder(country, beer_servings), x = beer_servings)) +
+ggplot(beer, aes(y = reorder(country, beer_servings), x = beer_servings, fill = beer_servings)) +
   geom_col() +
   labs(y = "",
        x = "Servings of Beer",
        title = "Beer Servings across Countries",
        caption = "source: fivethirtyeight") +
-  theme_minimal()
+  theme_bw() +
+  scale_fill_gradient(low="#ffc692", # This function manually adds a gradient to the fill variable.
+                      high="#f28e1c")  # The codes are the hex colour codes for beer
   
 
 ```
@@ -114,13 +116,14 @@ wine <- drinks %>%
   head(25)
 
 # create the plot of the top-25 countries using ggplot2
-ggplot(wine, aes(y = reorder(country, wine_servings), x = wine_servings)) +
+ggplot(wine, aes(y = reorder(country, wine_servings), x = wine_servings, fill = wine_servings)) +
   geom_col() +
   labs(y = "",
        x = "Servings of Wine",
        title = "Wine Servings across Countries",
        caption = "source: fivethirtyeight") +
-  theme_minimal()
+  theme_bw() +
+  scale_fill_gradient(low="#bb9394", high="#722f37") # hex colour codes for wine
 
 ```
 
@@ -133,13 +136,14 @@ spirits <- drinks %>%
   head(25)
 
 # create the plot of the top-25 countries using ggplot2
-ggplot(spirits, aes(y = reorder(country, spirit_servings), x = spirit_servings)) +
+ggplot(spirits, aes(y = reorder(country, spirit_servings), x = spirit_servings, fill = spirit_servings)) +
   geom_col() +
   labs(y = "",
        x = "Servings of Spirits",
        title = "Spirits Servings across Countries",
        caption = "source: fivethirtyeight") +
-  theme_minimal()
+  theme_bw() +
+  scale_fill_gradient(low="#fca393", high="#e03c31") # hex colour codes for spirit
 
 ```
 
