--- a/public/portfolio/project-3.rmd
+++ b/public/portfolio/project-3.rmd
@@ -1,31 +1,254 @@
 ---
 categories:
-- illustration
-client: John Doe
-date: "2019-05-12T12:14:34+06:00"
+- data analytics
+- group project
+author: Olivia Zhang
+date: "2020-10-11T12:14:34+06:00"
 description: This is meta description.
 draft: false
-image: images/portfolio/item-3.png
-project_url: https://themefisher.com/
-title: Artwork Design
+image: images/portfolio/life.jpg
+title: Yield Curve inversion
+output:
+  html_document:
+    theme: flatly
+    highlight: zenburn
+    number_sections: yes
+    toc: yes
+    toc_float: yes
+    code_folding: show
 ---
 
-#### Project Requirements
+```{r, setup, echo=FALSE}
+knitr::opts_chunk$set(
+  message = FALSE, 
+  warning = FALSE, 
+  tidy=FALSE,     # display code as typed
+  size="small")   # slightly smaller font for code
+options(digits = 3)
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum.
+# default figure size
+knitr::opts_chunk$set(
+  fig.width=6.75, 
+  fig.height=6.75,
+  fig.align = "center"
+)
+```
 
 
-#### Project Details
+```{r load-libraries, echo=FALSE}
+library(tidyverse)  # Load ggplot2, dplyr, and all the other tidyverse packages
+library(mosaic)
+library(ggthemes)
+library(GGally)
+library(readxl)
+library(here)
+library(skimr)
+library(janitor)
+library(broom)
+library(tidyquant)
+library(infer)
+library(openintro)
+library(tidyquant)
+```
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
+Every so often, we hear warnings from commentators on the "inverted yield curve" and its predictive power with respect to recessions. An explainer what a [inverted yield curve is can be found here](https://www.reuters.com/article/us-usa-economy-yieldcurve-explainer/explainer-what-is-an-inverted-yield-curve-idUSKBN1O50GA). If you'd rather listen to something, here is a great podcast from [NPR on yield curve indicators](https://www.podbean.com/media/share/dir-4zgj9-6aefd11)
+
+In addition, many articles and commentators think that, e.g., [*Yield curve inversion is viewed as a harbinger of recession*](https://www.bloomberg.com/news/articles/2019-08-14/u-k-yield-curve-inverts-for-first-time-since-financial-crisis). One can always doubt whether inversions are truly a harbinger of recessions, and [use the attached parable on yield curve inversions](https://twitter.com/5_min_macro/status/1161627360946511873).
+
+In our case we will look at US data and use the [FRED database](https://fred.stlouisfed.org/) to download historical yield curve rates, and plot the yield curves since 1999 to see when the yield curves flatten. If you want to know more, a very nice article that explains the [yield curve is and its inversion can be found here](https://fredblog.stlouisfed.org/2018/10/the-data-behind-the-fear-of-yield-curve-inversions/). At the end of this challenge you should produce this chart
+
+First, we will use the `tidyquant` package to download monthly rates for different durations. 
+
+```{r get_rates, warning=FALSE}
+# Get a list of FRED codes for US rates and US yield curve; choose monthly frequency
+# to see, eg., the 3-month T-bill https://fred.stlouisfed.org/series/TB3MS
+tickers <- c('TB3MS', # 3-month Treasury bill (or T-bill)
+             'TB6MS', # 6-month
+             'GS1',   # 1-year
+             'GS2',   # 2-year, etc....
+             'GS3',
+             'GS5',
+             'GS7',
+             'GS10',
+             'GS20',
+             'GS30')  #.... all the way to the 30-year rate
+
+# Turn  FRED codes to human readable variables
+myvars <- c('3-Month Treasury Bill',
+            '6-Month Treasury Bill',
+            '1-Year Treasury Rate',
+            '2-Year Treasury Rate',
+            '3-Year Treasury Rate',
+            '5-Year Treasury Rate',
+            '7-Year Treasury Rate',
+            '10-Year Treasury Rate',
+            '20-Year Treasury Rate',
+            '30-Year Treasury Rate')
+
+maturity <- c('3m', '6m', '1y', '2y','3y','5y','7y','10y','20y','30y')
+
+# by default R will sort these maturities alphabetically; but since we want
+# to keep them in that exact order, we recast maturity as a factor 
+# or categorical variable, with the levels defined as we want
+maturity <- factor(maturity, levels = maturity)
+
+# Create a lookup dataset
+mylookup<-data.frame(symbol=tickers,var=myvars, maturity=maturity)
+# Take a look:
+mylookup %>% knitr::kable()
+
+df <- tickers %>% tidyquant::tq_get(get="economic.data", 
+                   from="1960-01-01")   # start from January 1960
+
+glimpse(df)
+```
+
+Our dataframe `df` has three columns (variables):
+
+- `symbol`: the FRED database ticker symbol
+- `date`: already a date object
+- `price`: the actual yield on that date
+
+The first thing would be to join this dataframe `df` with the dataframe `mylookup` so we have a more readable version of maturities, durations, etc.
+
+```{r join_data, warning=FALSE}
+
+yield_curve <-left_join(df,mylookup,by="symbol") 
+
+```
+
+## Plotting the yield curve
+
+### Yields on US rates by duration since 1960
+
+```{r, fig.width = 11, dpi = 220}
+
+yield_curve$var <- factor(yield_curve$var, levels = c("3-Month Treasury Bill",
+                                                      "6-Month Treasury Bill",
+                                                      "1-Year Treasury Rate",
+                                                      "2-Year Treasury Rate",
+                                                      "3-Year Treasury Rate",
+                                                      "5-Year Treasury Rate",
+                                                      "7-Year Treasury Rate",
+                                                      "10-Year Treasury Rate",
+                                                      "20-Year Treasury Rate",
+                                                      "30-Year Treasury Rate"))
+
+ggplot(yield_curve, aes(x = date, y = price, col = var)) +
+  geom_line() +
+  facet_wrap(~var, ncol = 2) +
+  theme_bw() +
+  theme(legend.position = "none") +
+  labs(x = "",
+       y = "%",
+       caption = "Source: St. Louis Federal Reserve Economic Database (FRED)",
+       title = "Yields on U.S. Treasury rates since 1960")
+
+```
+
+### Monthly yields on US rates by duration since 1999 on a year-by-year basis  
+
+```{r, fig.width = 11, dpi = 220}
+
+yield_curve_99 <- yield_curve %>% 
+  filter(date > ydm(19983112)) %>% 
+  mutate(year = year(date)) %>% 
+  mutate(day = format(date, format = "%m-%d"))
+
+ggplot(yield_curve_99) +
+  geom_line(aes(x = maturity, y = price, group = day, colour = factor(year))) +
+  facet_wrap(~year, ncol = 4) +
+  labs(x = "Maturity",
+       y = "Yield(%)",
+       title = "US Yield Curve",
+       caption = "Source: St. Louis Federal Reserve Economic Database (FRED)") +
+  theme_bw() +
+  theme(legend.position = "none")
+
+```
+
+### 3-month and 10-year yields since 1999
+
+```{r, fig.width = 12, dpi = 220}
+
+yield_curve_99_spr <- yield_curve_99 %>% 
+  filter(maturity == "3m" | maturity == "10y")
+
+ggplot(yield_curve_99_spr, aes(x = date, y = price, group = var, colour = var)) +
+  geom_line() +
+  theme_bw() +
+  labs(x = "",
+       y = "%",
+       title = "Yields on 3-Month and 10-Year US Treasury rates since 1999",
+       caption = "Source: St. Louis Federal Reserve Economic Database (FRED)") +
+  theme(legend.title = element_blank())
+
+```
+
+According to [Wikipedia's list of recession in the United States](https://en.wikipedia.org/wiki/List_of_recessions_in_the_United_States), since 1999 there have been two recession in the US: between Mar 2001–Nov 2001 and between Dec 2007–June 2009. Does the yield curve seem to flatten before these recessions? Can a yield curve flattening really mean a recession is coming in the US? Since 1999, when did short-term (3 months) yield more than longer term (10 years) debt?
+
+
+Besides calculating the spread (10year - 3months), there are a few things we need to do to produce our final plot
+
+- Setup data for US recessions 
+- Superimpose recessions as the grey areas in our plot
+- Plot the spread between 10 years and 3 months as a blue/red ribbon, based on whether the spread is positive (blue) or negative(red)
+
+
+- For the first, the code below creates a dataframe with all US recessions since 1946
+
+```{r setup_US-recessions, warning=FALSE}
+
+# get US recession dates after 1946 from Wikipedia 
+# https://en.wikipedia.org/wiki/List_of_recessions_in_the_United_States
+
+recessions <- tibble(
+  from = c("1960-04-01", "1969-12-01", "1973-11-01", "1980-01-01","1981-07-01", "1990-07-01", "2001-03-01", "2007-12-01"),  
+  to = c("1961-02-01", "1970-11-01", "1975-03-01", "1980-07-01", "1982-11-01", "1991-03-01", "2001-11-01", "2009-06-01") 
+  )  %>% 
+  mutate(From = ymd(from), 
+         To=ymd(to),
+         duration_days = To-From)
+
+recessions
+```
+
+- To add the grey shaded areas corresponding to recessions, we use `geom_rect()`
+- to colour the ribbons blue/red we must see whether the spread is positive or negative and then use `geom_ribbon()`. You should be familiar with this from last week's homework on the excess weekly/monthly rentals of Santander Bikes in London.
+
+```{r, fig.width = 15, dpi = 180}
+
+yield_spread <- yield_curve %>% 
+  filter(maturity == "3m" | maturity  == "10y") %>% 
+  subset(select = -c(symbol, maturity)) %>%
+  pivot_wider(values_from = price, names_from = var) %>% 
+  rename(ten_y = `10-Year Treasury Rate`,
+         three_m = `3-Month Treasury Bill`) %>% 
+  mutate(diff = ten_y - three_m)
+
+ggplot(yield_spread, aes(x = date, y = diff)) +
+  geom_ribbon(aes(ymin = 0, ymax = pmax(diff,0)), fill = "#4682B4", colour = "black", alpha = 0.5) +
+  geom_ribbon(aes(ymax = 0, ymin = pmin(diff,0)), fill = "#ff3535", colour = "black", alpha = 0.5) +
+  geom_rect(data = recessions,
+            inherit.aes = FALSE,
+            aes(xmin = From, 
+                xmax = To, 
+                ymin = -Inf, 
+                ymax = Inf), 
+                fill = "grey", 
+                color = "NA",
+                alpha = 0.3) +
+  geom_rug(color = ifelse(yield_spread$diff>0, "#4682B4", "#ff3535"), 
+           size = 0.05, 
+           length = unit(0.03, "npc"),
+           sides = "b") +
+  theme_minimal() +
+  theme(legend.position = "none") +
+  scale_x_date(date_breaks = "2 years", date_labels = "%Y", limits = as.Date(c('1959-01-01', '2023-01-01'), format="%Y-%M-%D")) +
+  labs(x = "",
+       y = "Difference (10 year - 3 month) yield in %",
+       title = "Yield Curve Inversion: 10-year minus 3-month Treasury rates",
+       subtitle = "Difference in % points monthly averages.\nShaded areas correspond to recessions",
+       caption = "Source: St. Louis Federal Reserve Economic Database (FRED)")
+
+```
