--- a/content/portfolio/project-1.rmd
+++ b/content/portfolio/project-1.rmd
@@ -44,7 +44,6 @@ library(mosaic)
 library(ggthemes)
 library(lubridate)
 library(fivethirtyeight)
-library(here)
 library(skimr)
 library(janitor)
 library(vroom)
@@ -61,7 +60,7 @@ library(tidytext)
 library(patchwork)
 ```
 
-
+## At first glance:  
 Back in 2014, [fivethiryeight.com](https://fivethirtyeight.com/features/dear-mona-followup-where-do-people-drink-the-most-beer-wine-and-spirits/) published an article on alchohol consumption in different countries. The data `drinks` is available as part of the `fivethirtyeight` package. To get the data we install the `fivethirtyeight` package and upload the data.
 
 ```{r, load_alcohol_data}
